--- a/web/WEB-INF/view/header.jspf
+++ b/web/WEB-INF/view/header.jspf
@@ -29,6 +29,15 @@
     <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
     <link rel="shortcut icon" href="../../resources/images/favicon.ico"/>
+    <script>
+        function imgError(image) {
+            console.log(image.src)
+            image.onerror = "";
+            image.src = "http://localhost/img/no.png";
+            return true;
+        }
+
+    </script>
 </head>
 
 <body>
