--- a/web/resources/style.css
+++ b/web/resources/style.css
@@ -26,7 +26,6 @@ body {
     }
 }
 
-
 .col-lg-12 {
     margin-top: 30px !important;
 }
@@ -504,6 +503,16 @@ table.dataTable thead .sorting:after {
 
 .timeline-body > p + p {
     margin-top: 5px;
+}
+
+.thumbnail a > img, .thumbnail > img {
+    margin-right: auto;
+    margin-left: auto;
+    height: 200px !important;
+}
+
+.thumbnail {
+    height: 400px !important;
 }
 
 @media (max-width: 767px) {
